fixed checkstyle issues